
[package]
name = "unlock-indexer"
version = "0.1.0"
edition = "2021"


[dependencies]

tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }

ethers = { version = "2.0", features = ["ws", "abigen"] }
anyhow = "1.0"
futures-util = "0.3.31"
